<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/signIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="left"
        android:background="@color/black">


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="5dp"
            android:background="@color/black"
            android:onClick="goToPreviousPage"
            android:src="@drawable/fleche">

        </ImageButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/connectTitle"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:textSize="20dp" />



    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/signIn"
                android:textColor="#808080"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="15dp"
                android:src="@drawable/ic_email"/>

            <EditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:id="@+id/emailInput"
                android:layout_marginStart="8dp"
                android:hint="@string/email" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="15dp"
                android:src="@drawable/ic_password"/>
            <EditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:id="@+id/passwordInput"
                android:layout_marginStart="8dp"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotMdp"
            android:textColor="#103472"
            android:textSize="14sp"
            android:layout_marginRight="20dp"
            android:layout_gravity="end"
            />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/loginButton"
                android:gravity="center"
                android:background="@drawable/square_button"
                android:backgroundTint="@null"
                android:text="@string/connect" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newOnApp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signUp"
                android:textColor="#103472"
                android:onClick="goToSignUp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <!-- Ligne horizontale au-dessus de "OU" -->
            <View
                android:layout_width="125dp"
                android:layout_height="2dp"
                android:background="#808080" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OU"
                android:textSize="14sp"
                android:textStyle="bold"
                android:paddingHorizontal="8dp"/>

            <!-- Ligne horizontale en dessous de "OU" -->
            <View
                android:layout_width="125dp"
                android:layout_height="2dp"
                android:background="#808080"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_facebook"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facebookString"
                android:textSize="14sp"
                android:textColor="#103472"
                android:paddingLeft="8dp"/>
        </LinearLayout>


    </LinearLayout>
</ScrollView>