<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/signUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="left"
            android:background="@color/black">


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="11dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="5dp"
                android:background="@color/black"
                android:onClick="goToPreviousPage"
                android:src="@drawable/fleche" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/signUpPage"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/white"
                android:textSize="20dp" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left"
            android:layout_marginTop="35dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/createNewAcct"
                android:textColor="#808080"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="15dp"
                android:src="@drawable/ic_user"/>

            <EditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/prenom"
                android:inputType="textEmailAddress"
                android:id="@+id/editTextPrenom"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">


            <EditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="47dp"
                android:hint="@string/nom"
                android:inputType="textEmailAddress"
                android:id="@+id/editTextNom"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="15dp"
                android:src="@drawable/ic_email"/>

            <EditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:id="@+id/editTextEmail"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="35dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="15dp"
                android:src="@drawable/ic_password"/>

            <EditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:id="@+id/editTextPassword"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="35dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_phone"/>
                <Spinner
                    android:id="@+id/country_code"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:entries="@array/country_codes"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="10dp"/>


                <EditText
                    android:layout_width="207dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:hint="@string/tel"
                    android:inputType="number"
                    android:id="@+id/editTextPhone"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center">

            <Button
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/square_button"
                android:backgroundTint="@null"
                android:text="@string/connect"
                android:id="@+id/buttonValidate"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>